clusters/local/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  namespace: ingress-nginx
spec:
  ingressClassName: local-nginx
  rules:
    - host: portfolio-rebalancer.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pr
                port:
                  number: 80
